--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	],
 	"homepage": "https://github.com/Brauliovh3/Hatsune-Miku",
 	"author": {
-		"name": "おDanịel.xyz⁩"
+		"name": "(ㅎㅊDEPOOLㅊㅎ)⁩"
 	},
 	"repository": {
 		"type": "git",
