--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "hatsune-miku",
+	"name": "Hatsune-Miku",
 	"version": "6.0.0",
 	"description": "Simple WhatsApp Bot Multi Device",
 	"main": "main.js",
